<resources>
    <string name="app_name">Konvalesen</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="konvalesen_adalah_platform_yang_tepat_untuk_saling_membantu_penderita_covid_19_untuk_saling_membantu_donor_plasma_konvalesen">Konvalesen adalah platform yang tepat untuk mempermudah menemukan atau memberikan donor Plasma Konvalesen kepada yang membutuhkan</string>
    <string name="login">Login</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="_62">+62</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="silahkan_memasukkan_nomor_handphone_anda">Silahkan memasukkan nomor Handphone anda:</string>
    <string name="xxxxxxxxxxx">xxxxxxxxxxx</string>
    <string name="kirim_ulang_kode_verifikasi">Kirim Ulang Kode Verifikasi</string>
    <string name="xxxxxx">XXXXXX</string>
    <string name="ex_muhammad_irvan">ex: Muhammad Irvan</string>
    <string name="silahkan_memasukkan_kode_verifikasi_yang_telah_kami_kirimkan_ke_nomor_anda">Silahkan memasukkan kode verifikasi yang telah kami kirimkan ke nomor </string>
    <string name="verifikasi_otp">Verifikasi OTP</string>
    <string name="nama">Nama</string>
    <string name="silahkan_memasukkan_nama_anda">Silahkan memasukkan nama dan upload foto anda</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="logout">Logout</string>
    <string name="silahkan_memillih_golongan_darah_anda_jika_ada_orang_lain_yang_membutuhkan_sesuai_dengan_golongan_darah_anda_kami_akan_memberikan_pemberitahuan">Silahkan memillih golongan darah anda. Jika ada orang lain yang membutuhkan sesuai dengan golongan darah anda, kami akan memberikan pemberitahuan</string>
    <string name="golongan_darah">Golongan Darah</string>
    <string name="a">A</string>
    <string name="a_min">A-</string>
    <string name="a_plus">A+</string>
    <string name="b">B</string>
    <string name="b_min">B-</string>
    <string name="b_plus">B+</string>
    <string name="o">O</string>
    <string name="o_min">O-</string>
    <string name="o_plus">O+</string>
    <string name="ab">AB</string>
    <string name="ab_min">AB-</string>
    <string name="ab_plus">AB+</string>
    <string name="silahkan_tekan_tombol_minta_bantuan_untuk_meminta_bantuan_donor_plasma">Silahkan tekan tombol \'Minta Bantuan\' untuk meminta bantuan donor plasma</string>
    <string name="minta_bantuan">Minta Bantuan</string>
    <string name="darah_yang_dibutuhkan">Darah yang dibutuhkan</string>
    <string name="lokasi_rumah_sakit">Lokasi Rumah Sakit</string>
    <string name="meminta_bantuan_donor">Meminta Bantuan Donor Plasma Konvalesen</string>
    <string name="session_encrypted_user">session_user</string>
    <string name="bantu_donor">Bantu Donor</string>
    <string name="tab_text_1">Donor Dalam Proses</string>
    <string name="tab_text_2">History Mendonor</string>
    <string name="bantuan_donor_saya">Bantuan Donor Saya</string>
    <string name="pendonoran_saya">Pendonoran saya</string>
    <string name="tab_text_3">History Bantuan Donor</string>
    <string name="status_mencari_pendonor">Sedang Mencari Pendonor</string>
    <string name="tidak_ada_data_pengajuan_bantuan_donor">Tidak ada data pengajuan bantuan donor</string>
    <string name="warning_bantuan">Permintaan bantuan donor plasma anda belum selesai, anda dapat meminta bantuan setelah permintaan sebelumnya diakhiri atau selesai. Anda dapat membuka permintaan bantuan anda di <b>Menu</b> pojok kanan atas -> <b>Bantuan Donor Saya</b></string>
    <string name="warning_menerima_bantuan">Kegiatan untuk membantu donor plasma anda belum selesai, anda dapat menjadi pendonor lagi setelah permintaan sebelumnya diakhiri atau selesai. Anda dapat membuka kegiatan pendonoran anda sebelumnya di <b>Menu</b> pojok kanan atas -> <b>Pendonoran Saya</b></string>
    <string name="warning_bantuan_title">Permintaan Gagal</string>
    <string name="title_activity_on_receive_confirmation">OnReceiveConfirmationActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="bersedia_menjadi_pendonor">Bersedia Menjadi Pendonor</string>
    <string name="saya_belum_bisa">Saya Belum Bisa</string>
    <string name="request_denied">Request tidak diijinkan, gagal memuat data</string>
    <string name="tolak_beri_bantuan">Tolak memberi bantuan</string>
    <string name="messege_tolak_membantu">Apakah anda yakin untuk menolak memberi bantuan? Anda tetap dapat memberi bantuan di waktu lain dan melihat daftar orang yang membutuhkan pada halaman utama</string>
    <string name="warning_setuju_donor">Sebelum anda menyetujui untuk membantu pendonoran, pastikan anda setuju dan memenuhi persyaratan di atas</string>
    <string name="mengakhiri_jadi_pendonor">Mengakhiri Jadi Pendonor</string>
    <string name="cb_confirmation_not_checked">Anda harus menyetujui persyaratan sebagai pendonor untuk melanjutkan</string>
    <string name="status_approve">Approve</string>
    <string name="akhiri_pendonoran">Mengakhiri Pendonoran</string>
    <string name="salah_memasukkan_data">Salah memasukkan data</string>
    <string name="kebutuhan_darah_sudah_terpenuhi">Kebutuhan plasma sudah terpenuhi</string>
    <string name="permintaan_mengakhiri_gagal">Permintaan gagal, alasan tidak terpenuhi</string>
    <string name="tidak_dapat_memenuhi_kebutuhan_darah">Tidak dapat memenuhi kebutuhan plasma</string>
    <string name="lihat_petunjuk_arah">Lihat Petunjuk Arah</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>