<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.VerifikasiRegisterFragment">


    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/konvalesen"
        android:text="@string/selanjutnya"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_golABplus"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/nama"
        android:textColor="@color/konvalesen"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_deskripsiNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/silahkan_memasukkan_nama_anda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nama" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nama"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_deskripsiNama"
        app:layout_constraintStart_toStartOf="@+id/tv_deskripsiNama"
        app:layout_constraintTop_toBottomOf="@+id/tv_deskripsiNama">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ex_muhammad_irvan"
            android:textColor="@color/design_default_color_on_secondary"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_golonganDarah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/golongan_darah"
        android:textColor="@color/konvalesen"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/til_nama"
        app:layout_constraintStart_toStartOf="@+id/til_nama"
        app:layout_constraintTop_toBottomOf="@+id/til_nama" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/silahkan_memillih_golongan_darah_anda_jika_ada_orang_lain_yang_membutuhkan_sesuai_dengan_golongan_darah_anda_kami_akan_memberikan_pemberitahuan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_golonganDarah" />

    <Button
        android:id="@+id/btn_golA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFFFFF"
        android:elevation="10dp"
        android:text="@string/a"
        android:textColor="@color/konvalesen"
        app:cornerRadius="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_golAmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:elevation="10dp"
        android:text="@string/a_min"
        android:textColor="@color/konvalesen"
        app:cornerRadius="100dp"
        app:layout_constraintStart_toStartOf="@+id/btn_golA"
        app:layout_constraintTop_toBottomOf="@+id/btn_golA"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_golAplus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:elevation="10dp"
        android:text="@string/a_plus"
        android:textColor="@color/konvalesen"
        app:cornerRadius="100dp"
        app:layout_constraintStart_toStartOf="@+id/btn_golAmin"
        app:layout_constraintTop_toBottomOf="@+id/btn_golAmin"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_golB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFFFFF"
        android:elevation="10dp"
        android:text="@string/b"
        android:textColor="@color/konvalesen"
        app:cornerRadius="100dp"
        app:layout_constraintStart_toEndOf="@+id/btn_golA"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_golBmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="#FFFFFF"
        android:elevation="10dp"
        android:text="@string/b_min"
        android:textColor="@color/konvalesen"
        app:cornerRadius="100dp"
        app:layout_constraintStart_toEndOf="@+id/btn_golA"
        app:layout_constraintTop_toBottomOf="@+id/btn_golB"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_golBplus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="#FFFFFF"
        android:elevation="10dp"
        android:text="@string/b_plus"
        android:textColor="@color/konvalesen"
        app:cornerRadius="100dp"
        app:layout_constraintStart_toEndOf="@+id/btn_golA"
        app:layout_constraintTop_toBottomOf="@+id/btn_golBmin"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_golO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#FFFFFF"
        android:elevation="10dp"
        android:text="@string/o"
        android:textColor="@color/konvalesen"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_golAB"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_golOmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#FFFFFF"
        android:elevation="10dp"
        android:text="@string/o_min"
        android:textColor="@color/konvalesen"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_golABmin"
        app:layout_constraintTop_toBottomOf="@+id/btn_golO"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_golOplus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#FFFFFF"
        android:elevation="10dp"
        android:text="@string/o_plus"
        android:textColor="@color/konvalesen"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_golABplus"
        app:layout_constraintTop_toBottomOf="@+id/btn_golOmin"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_golAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FFFFFF"
        android:elevation="10dp"
        android:text="@string/ab"
        android:textColor="@color/konvalesen"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_golABmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:elevation="10dp"
        android:text="@string/ab_min"
        android:textColor="@color/konvalesen"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_golAB"
        app:layout_constraintTop_toBottomOf="@+id/btn_golAB"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_golABplus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:elevation="10dp"
        android:text="@string/ab_plus"
        android:textColor="@color/konvalesen"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_golABmin"
        app:layout_constraintTop_toBottomOf="@+id/btn_golABmin"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>