<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.bantuan.BantuanFragment">

    <ProgressBar
        android:id="@+id/progressBar4"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:indeterminate="true"
        android:indeterminateBehavior="cycle"
        android:indeterminateTint="@color/konvalesen"
        android:max="@integer/material_motion_duration_short_1"
        android:progress="@integer/material_motion_duration_short_1"
        android:progressTint="@color/konvalesen"
        app:layout_constraintBottom_toBottomOf="@+id/tv_lokasiOnMap"
        app:layout_constraintStart_toStartOf="@+id/tv_lokasiOnMap" />

    <ProgressBar
        android:id="@+id/progressBar5"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateBehavior="cycle"
        android:indeterminateTint="@color/konvalesen"
        android:max="@integer/material_motion_duration_short_1"
        android:progress="@integer/material_motion_duration_short_1"
        android:progressTint="@color/konvalesen"
        app:layout_constraintEnd_toEndOf="@+id/tv_lokasiOnMap"
        app:layout_constraintStart_toStartOf="@+id/tv_lokasiOnMap"
        app:layout_constraintTop_toTopOf="@+id/tv_lokasiOnMap" />

    <Button
        android:id="@+id/btn_next2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/konvalesen"
        android:text="@string/selanjutnya"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="Bantuan"
        app:titleTextColor="@color/konvalesen" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:context=".view.bantuan.MapsFragment" />

    <TextView
        android:id="@+id/tv_mintaBantuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/meminta_bantuan_donor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map" />

    <TextView
        android:id="@+id/tv_lokasiPenerima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/lokasi_rumah_sakit"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />

    <TextView
        android:id="@+id/tv_lokasiOnMap"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_lokasiPenerima"
        app:layout_constraintTop_toBottomOf="@+id/tv_lokasiPenerima" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_bloodtype_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lokasiOnMap" />

    <TextView
        android:id="@+id/tv_darahKebutuhan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/darah_yang_dibutuhkan"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:scrollIndicators="bottom"
        android:scrollbarStyle="outsideInset"
        android:scrollbarThumbHorizontal="@color/konvalesen"
        android:scrollbars="horizontal|none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/tv_darahKebutuhan">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_golA2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:backgroundTint="#FFFFFF"
                android:elevation="5dp"
                android:text="@string/a"
                android:textColor="@color/konvalesen"
                app:cornerRadius="100dp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_golAmin2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:backgroundTint="#FFFFFF"
                android:elevation="10dp"
                android:text="@string/a_min"
                android:textColor="@color/konvalesen"
                app:cornerRadius="100dp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_golAplus2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:backgroundTint="#FFFFFF"
                android:elevation="10dp"
                android:text="@string/a_plus"
                android:textColor="@color/konvalesen"
                app:cornerRadius="100dp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_golAB2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:backgroundTint="#FFFFFF"
                android:elevation="10dp"
                android:text="@string/ab"
                android:textColor="@color/konvalesen"
                app:cornerRadius="100dp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_golABmin2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:backgroundTint="#FFFFFF"
                android:elevation="10dp"
                android:text="@string/ab_min"
                android:textColor="@color/konvalesen"
                app:cornerRadius="100dp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_golABplus2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:backgroundTint="#FFFFFF"
                android:elevation="10dp"
                android:text="@string/ab_plus"
                android:textColor="@color/konvalesen"
                app:cornerRadius="100dp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_golB2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:backgroundTint="#FFFFFF"
                android:elevation="10dp"
                android:text="@string/b"
                android:textColor="@color/konvalesen"
                app:cornerRadius="100dp"
                tools:ignore="TextContrastCheck"
                tools:layout_editor_absoluteX="191dp"
                tools:layout_editor_absoluteY="601dp" />

            <Button
                android:id="@+id/btn_golBmin2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:backgroundTint="#FFFFFF"
                android:elevation="10dp"
                android:text="@string/b_min"
                android:textColor="@color/konvalesen"
                app:cornerRadius="100dp"
                app:layout_constraintStart_toEndOf="@+id/btn_golA"
                app:layout_constraintTop_toBottomOf="@+id/btn_golB"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_golBplus2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:backgroundTint="#FFFFFF"
                android:elevation="10dp"
                android:text="@string/b_plus"
                android:textColor="@color/konvalesen"
                app:cornerRadius="100dp"
                app:layout_constraintStart_toEndOf="@+id/btn_golA"
                app:layout_constraintTop_toBottomOf="@+id/btn_golBmin"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_golO2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:backgroundTint="#FFFFFF"
                android:elevation="10dp"
                android:text="@string/o"
                android:textColor="@color/konvalesen"
                app:cornerRadius="100dp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_golOmin2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="#FFFFFF"
                android:elevation="10dp"
                android:text="@string/o_min"
                android:textColor="@color/konvalesen"
                app:cornerRadius="100dp"
                app:layout_constraintEnd_toStartOf="@+id/btn_golABmin"
                app:layout_constraintTop_toBottomOf="@+id/btn_golO"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_golOplus2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="#FFFFFF"
                android:elevation="10dp"
                android:text="@string/o_plus"
                android:textColor="@color/konvalesen"
                app:cornerRadius="100dp"
                app:layout_constraintEnd_toStartOf="@+id/btn_golABplus"
                app:layout_constraintTop_toBottomOf="@+id/btn_golOmin"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </HorizontalScrollView>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_baseline_share_location_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mintaBantuan" />
</androidx.constraintlayout.widget.ConstraintLayout>